--- a/plug-ins/OrderPlacingStrategiesPanel/ru-RU.po
+++ b/plug-ins/OrderPlacingStrategiesPanel/ru-RU.po
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit"
 
 msgid "Order placing strategies"
-msgstr "Стратегии размещения ордеров"
+msgstr "Стратегии отправки ордеров"
 
 msgid "Cancel"
 msgstr "Отмена"
@@ -29,16 +29,16 @@ msgid "Cancel all"
 msgstr "Отменить все"
 
 msgid "Clear finished"
-msgstr "Чистый готовый"
+msgstr "Убрать завершенные"
 
 msgid "CANCELL ALL"
 msgstr "ОТМЕНИТЬ ВСЕ"
 
 msgid "CLEAR FINISHED"
-msgstr "ЧИСТЫЙ ГОТОВЫЙ"
+msgstr "УБРАТЬ ЗАВЕРШЕННЫЕ"
 
 msgid "LOGS"
-msgstr "Журналы"
+msgstr "Журнал"
 
 msgid "Time"
 msgstr "Время"
@@ -59,7 +59,7 @@ msgid "Name"
 msgstr "Имя"
 
 msgid "Symbol"
-msgstr "Инструмент"
+msgstr "Символ"
 
 msgid "Connection"
 msgstr "Соединение"
